# halclient

./: LICENSE  README.md  pyproject.toml  setup.cfg
examples/: usage.py
src/halpy/: __init__.py  client.py
